Fusion Builder jQuery chosen conflicts with GD jQuery chosen - FIXED
Hook added to enable/disable editor for description field - CHANGED
Spain now uses administrative_area_level_2 for regions (this will affect current Spanish listings, you should add new regions and then merge out old ones) -  CHANGED
Category are not unticked on page refresh for map post type other than default - FIXED

v1.6.15
Google Services API can conflict with newer version of the Google Service Class - UPDATED
No way to deactivate GA Settings, deactivation button added - ADDED
Google map directions not working on detail page map - FIXED
CSS issue with map category show/hide icon - FIXED
Filters added to admin BCC emails - ADDED
Twenty Seventeen theme compatibility settings added - ADDED
geodir_save_post_info() now faster and escapes values better - CHANGED
Using apostrophe(&#39;) in title breaks title in map info window  - FIXED

v1.6.11
geodir_set_as_home rule still existed from depreciated option - FIXED
Registration box, changed Name/Email around so to work with browser save user/pass - CHANGED
Fix for primer theme edit place page - FIXED
Font awesome rating validation not working - FIXED
Admin BCC post_submit subject/message hooks not applied - FIXED
Google maps on some mobile devices adds a new span which breaks slide out menu - FIXED
Max and min map zoom levels set via hooks not working - FIXED
$extra_fields in custom field stripping slashes too early - FIXED
Email headers changed from string to array() and MIME-Version removed - CHANGED
Added filters to the add listing page title and description labels for difficult translations - ADDED
Reunion (island) added and Burma removed (replaced with Myanmar) - CHANGED
Payment manager restrict description input count can affect video tab - FIXED
WPML exclude cats on map does not work for translations of categories - FIXED
Dummy data section improved and additional industries added - ADDED